# blazefetch

./: LICENSE  README.md
.github/workflows/: build-amd64.yml  build-arm64.yml  build.yml
src/: CMakeLists.txt  Makefile  blazefetch.cpp  blazefetch_test.cpp
src/archive/2.0.0/: blazefetch.cpp
src/archive/2.1.1/: blazefetch.cpp
src/archive/2.6.4/: blazefetch.cpp
src/helper/: ascii.cpp  ascii_font.cpp  colors.cpp  cute.cpp  daemon.cpp  defines.cpp  get.cpp  help.cpp  live.cpp  memory.cpp  minimal.cpp  modules.cpp  options.cpp  run.cpp  static.cpp  version.cpp
src/modules/: brightness.cpp  cpu.cpp  date.cpp  de.cpp  git.cpp  glyph.cpp  gpu.cpp  greeting.cpp  helper.cpp  host.cpp  kernel.cpp  media.cpp  network.cpp  os.cpp  package.cpp  ram.cpp  screen.cpp  shell.cpp  storage.cpp  terminal.cpp  time.cpp  title.cpp  uptime.cpp  volume.cpp
src/test/: blazefetch_test.cpp
